# interval-index

./: .gitignore  README.md  flake.nix  hie.yaml  interval-index.cabal
.github/actions/: ci.yml
.github/workflows/: benchmark.yml  ci.yml
bench/: Main.hs
bench-compare/: intervaltree-bench.py
bench-compare/test-data/: data-carrying-dense.jsonl  data-carrying-sparse.jsonl  literal-dense.jsonl  literal-sparse.jsonl
doc/: perf.md
scripts/: bench  test
src/Data/: Interval.hs  IntervalIndex.hs  IntervalTree.hs
src/Data/IntervalIndex/: Internal.hs
test/Test/Data/: Instances.hs  IntervalIndexSpec.hs  IntervalSpec.hs  IntervalTreeSpec.hs
